--- a/yeni.html
+++ b/yeni.html
@@ -1,16 +1,12 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Aplikasi Fashfood Basis Web</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <body>
 
-  <p>Before the script...</p>
-
-  <script>
-    alert( 'Hello, world!' );
-  </script>
-
-  <p>...After the script.</p>
-
 </body>
-
 </html>
