--- a/index.html
+++ b/index.html
@@ -1,44 +1,179 @@
-
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Web | Portofolio</title>
+
+ <meta charset="UTF-8">
+
+ <title>Layout Sederhana</title>
+
+ <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <nav>
-                <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Portofolio</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>   
-                </ul>
-            </nav>
-        </div>
-        <main class="content">
-              <section class="hero">
-                  <img src="online.png" alt="">
-              <div class="hero-content">
-                  <h1>Profesi</h1><br></h2>Junior Content Writer at Dicoding</h2><br><br>   
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, aperiam dolore assumenda velit repellendus recusandae magni consectetur mollitia facere incidunt inventore perspiciatis  debitis doloribus ullam minima culpa voluptatem. Repellendus, option.</p>
-<a href="" class="action-btn">Profile Saya</a>
-              </div>
-                </section>
-        </div>
-        <div class="footer">
-            <footer>
-            <ul>
-                <li><img src="instagram.png" alt=""><p>Instagram</p></a></li>
-                <li><img src="facebook.png" alt=""><p>Facebook</p></a></li>
-                <li><img src="twitter.png" alt=""><p>Twitter</p></a></li>
-                <li><img src="telegram.png" alt=""><p>Telegram</p></a></li>
-            </ul>
-            </footer>
-        </div>
-    </div>    
+
+ <div class="container">
+
+  <div class="banner">
+
+   <div class="logo"><img src="logo-kue.png" alt="logo" width="100%" height="70px"></div>
+
+   <div class="title">QueQu.com<br>
+
+   <div class="text-title">" QueQu Halal, Enak, Lezat, dan Bergizi "</div></div>
+
+   <div class="alamat">
+
+    Pondok Ungu Permai<br>
+
+    Jl. Merseyside No.18 Rt.008/011<br>
+
+    Kaliabang Tengah - Bekasi Utara<br>
+
+    021-88730665
+
+   </div>
+
+  </div>
+
+  <div class="content">
+
+   <div class="content-kiri">
+
+    <div class="navigation">
+
+     <ul>
+
+      <li><a href=".">Beranda</a></li>
+
+      <li><a href=".">Produk</a></li>
+
+      <li><a href=".">Resep</a>
+
+       <ul>
+
+        <li><a href=".">Resep Kue Kering</a></li>
+
+        <li><a href=".">Resep Kue Basah</a></li>
+
+        <li><a href=".">Resep Kue Ulang Tahin</a></li>
+
+        <li><a href=".">Resep Kue Bolu</a>
+
+         <ul class="sub">
+
+          <li><a href=".">Resep Bolu Kukus</a></li>
+
+          <li><a href=".">Resep Bolu Panggang</a></li>
+
+          <li><a href=".">Resep Bolu Coklat</a></li>
+
+          <li><a href=".">Resep Bolu Pandan</a></li> 
+
+         </ul>
+
+        </li> 
+
+       </ul>
+
+      </li>
+
+      <li><a href=".">Tentang Kami</a></li>
+
+      <li><a href=".">Kontak</a></li>
+
+     </ul>
+
+    </div>
+
+    <div class="promo"><img src="kue1.jpg" alt="" width="100%" height="140px"></div>
+
+    <div class="promo"><img src="kue2.jpg" alt="" width="100%" height="140px"></div>
+
+    <div class="promo"><img src="kue1.jpg" alt="" width="100%" height="140px"></div>
+
+   </div>
+
+   <div class="iklan"><marquee behavior="alternate"> Selamat Datang Di Toko Kami </marquee></div>
+
+   <div class="content-tengah">
+
+    <div class="isi-content">
+
+     <img src="kue1.jpg" alt="" width="100%" height="170px">
+
+     <div class="text-content">Kue Kecubit</div>
+
+    </div>
+
+    <div class="isi-content">
+
+     <img src="kue2.jpg" alt="" width="100%" height="170px">
+
+     <div class="text-content">Kue Bulet</div>
+
+    </div>
+
+    <div class="isi-content">
+
+     <img src="kue1.jpg" alt="" width="100%" height="170px">
+
+     <div class="text-content">Kue Cubit</div>
+
+    </div>
+
+    <div class="isi-content">
+
+     <img src="kue2.jpg" alt="" width="100%" height="170px">
+
+     <div class="text-content">Kue Bosok</div>
+
+    </div>
+
+    <div class="isi-content">
+
+     <img src="kue1.jpg" alt="" width="100%" height="170px">
+
+     <div class="text-content">Kue Markarane</div>
+
+    </div>
+
+    <div class="isi-content">
+
+     <img src="kue2.jpg" alt="" width="100%" height="170px">
+
+     <div class="text-content">Kue Limpoo</div>
+
+    </div>
+
+    <div class="pagging">
+
+     <div class="number">
+
+      <div class="number1"> << </div>
+
+      <div class="number1">1</div>
+
+      <div class="number1">2</div>
+
+      <div class="number1">3</div>
+
+      <div class="number1"> >> </div>
+
+     </div>
+
+    </div>
+
+   </div>
+
+  </div>
+
+  <div class="footer">Design by heeyriku &copy 2015</div>
+
+ </div>
+
 </body>
+
 </html>
