--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
  <meta charset="UTF-8">
 
- <title>Layout Sederhana</title>
+ <title>Sang Donuts</title>
 
  <link rel="stylesheet" href="style.css">
 
@@ -20,19 +20,19 @@
 
    <div class="logo"><img src="logo-kue.png" alt="logo" width="100%" height="70px"></div>
 
-   <div class="title">QueQu.com<br>
+   <div class="title">Sang Donuts<br>
 
-   <div class="text-title">" QueQu Halal, Enak, Lezat, dan Bergizi "</div></div>
+   <div class="text-title">"Sang donuts dengan kentang asli, Enak, Lezat, dan Bergizi "</div></div>
 
    <div class="alamat">
 
-    Pondok Ungu Permai<br>
+    Depan Perhutani<br>
 
-    Jl. Merseyside No.18 Rt.008/011<br>
+    Jl. H Ikhsan Sumberbening Kesilir<br>
 
-    Kaliabang Tengah - Bekasi Utara<br>
+    Siliragung - Banyuwangi<br>
 
-    021-88730665
+    081361568818
 
    </div>
 
