--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="banner">
 
-   <div class="logo"><img src="logo-kue.png" alt="logo" width="100%" height="70px"></div>
+   <div class="logo"><img src="logo.jpeg" alt="logo" width="100%" height="70px"></div>
 
    <div class="title">Sang Donuts<br>
 
