--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="banner">
 
-   <div class="logo"><img src="logo.jpeg" alt="logo" width="100%" height="70px"></div>
+   <div class="logo"><img src="donat-removebg-preview.png" alt="logo" width="100%" height="70px"></div>
 
    <div class="title">Sang Donuts<br>
 
@@ -48,39 +48,9 @@
 
       <li><a href=".">Beranda</a></li>
 
-      <li><a href=".">Produk</a></li>
+      <li><a href=".">Menu</a></li>
 
-      <li><a href=".">Resep</a>
-
-       <ul>
-
-        <li><a href=".">Resep Kue Kering</a></li>
-
-        <li><a href=".">Resep Kue Basah</a></li>
-
-        <li><a href=".">Resep Kue Ulang Tahin</a></li>
-
-        <li><a href=".">Resep Kue Bolu</a>
-
-         <ul class="sub">
-
-          <li><a href=".">Resep Bolu Kukus</a></li>
-
-          <li><a href=".">Resep Bolu Panggang</a></li>
-
-          <li><a href=".">Resep Bolu Coklat</a></li>
-
-          <li><a href=".">Resep Bolu Pandan</a></li> 
-
-         </ul>
-
-        </li> 
-
-       </ul>
-
-      </li>
-
-      <li><a href=".">Tentang Kami</a></li>
+      <li><a href=".">Riwayat</a></li>
 
       <li><a href=".">Kontak</a></li>
 
@@ -88,63 +58,47 @@
 
     </div>
 
-    <div class="promo"><img src="kue1.jpg" alt="" width="100%" height="140px"></div>
+    <div class="promo"><img src="" alt="" width="100%" height="140px"></div>
 
-    <div class="promo"><img src="kue2.jpg" alt="" width="100%" height="140px"></div>
+    <div class="promo"><img src="" alt="" width="100%" height="140px"></div>
 
-    <div class="promo"><img src="kue1.jpg" alt="" width="100%" height="140px"></div>
+    <div class="promo"><img src="" alt="" width="100%" height="140px"></div>
 
    </div>
 
-   <div class="iklan"><marquee behavior="alternate"> Selamat Datang Di Toko Kami </marquee></div>
+   <div class="iklan"><marquee behavior="alternate"> Selamat Datang Di Sang Donuts </marquee></div>
 
    <div class="content-tengah">
 
     <div class="isi-content">
 
-     <img src="kue1.jpg" alt="" width="100%" height="170px">
+     <img src="isi 4.jpg" alt="" width="100%" height="170px">
 
-     <div class="text-content">Kue Kecubit</div>
-
-    </div>
-
-    <div class="isi-content">
-
-     <img src="kue2.jpg" alt="" width="100%" height="170px">
-
-     <div class="text-content">Kue Bulet</div>
+     <div class="text-content">Paket 1</div>
 
     </div>
 
     <div class="isi-content">
 
-     <img src="kue1.jpg" alt="" width="100%" height="170px">
+     <img src="isi 6.jpg" alt="" width="100%" height="170px">
 
-     <div class="text-content">Kue Cubit</div>
-
-    </div>
-
-    <div class="isi-content">
-
-     <img src="kue2.jpg" alt="" width="100%" height="170px">
-
-     <div class="text-content">Kue Bosok</div>
+     <div class="text-content">Paket 2</div>
 
     </div>
 
     <div class="isi-content">
 
-     <img src="kue1.jpg" alt="" width="100%" height="170px">
+     <img src="isi 9.jpg" alt="" width="100%" height="170px">
 
-     <div class="text-content">Kue Markarane</div>
+     <div class="text-content">Paket 3</div>
 
     </div>
 
     <div class="isi-content">
 
-     <img src="kue2.jpg" alt="" width="100%" height="170px">
+     <img src="isi 12.jpg" alt="" width="100%" height="170px">
 
-     <div class="text-content">Kue Limpoo</div>
+     <div class="text-content">Paket 4</div>
 
     </div>
 
