--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   </div>
 
-  <div class="footer">Design by heeyriku &copy 2015</div>
+  <div class="footer">Copyright 2021</div>
 
  </div>
 
