--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="banner">
 
-   <div class="logo"><img src="donat-removebg-preview.png" alt="logo" width="100%" height="70px"></div>
+   <div class="logo"><img src="Remini20211215010950891-removebg-preview.PNG" alt="logo" width="100%" height="70px"></div>
 
    <div class="title">Sang Donuts<br>
 
