--- a/sangdonuts/admin.html
+++ b/sangdonuts/admin.html
@@ -97,7 +97,7 @@
         <div class="row footer-body">
           <div class="col-md-6">
           <div class="copyright">
-            <strong>Copyright</strong> <i class="far fa-copyright"></i> 2020 -  Designed by Alfirdaus&Rinaldo</p>
+            <strong>Copyright</strong> <i class="far fa-copyright"></i> 2021 -  Aplikasi Web</p>
           </div>
           </div>
 
