--- a/sangdonuts/user.html
+++ b/sangdonuts/user.html
@@ -65,8 +65,8 @@
       <div class="container">
         <div class="judul text-center mt-5">
           <h3 class="font-weight-bold">Sang Donuts</h3>
-          <h5>Bukit Kemuning, Tanjung Piayu, Batam
-          <br>Buka Jam <strong>16:00 - 23:00</strong></h5>
+          <h5>Banyuwangi, Jawa Timur, Indonesia
+          <br>Buka Jam <strong>08:00 - 20:00</strong></h5>
         </div>
 
         <div class="row mb-5 mt-5 ">
@@ -97,7 +97,7 @@
         <div class="row footer-body">
           <div class="col-md-6">
           <div class="copyright">
-            <strong>Copyright</strong> <i class="far fa-copyright"></i> 2020 -  Designed by Alfirdaus&Rinaldo</p>
+            <strong>Copyright</strong> <i class="far fa-copyright"></i> 2021 -  Aplikasi Web</p>
           </div>
           </div>
 
